# CollatzConjecture

./: ArgumentParser.hpp  CMakeLists.txt  CollatzConjecture.pro  README.md  main.cpp  main1.cpp  main2.cpp
CollatzSequences/: CollatzSequenceBase.cpp  CollatzSequenceBase.hpp  CollatzSequenceMath.cpp  CollatzSequenceMath.hpp  CollatzSequenceMemory.cpp  CollatzSequenceMemory.hpp
